<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.sounds.customssn.MainActivity" >
<Button
	 android:layout_width="200dp"
	 android:layout_height="wrap_content"
	 android:onClick="sndCapturar" 
	 android:text="@string/button_capturar" />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:onClick="sndConsultar" 
    android:text="@string/button_consultar" />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:onClick="sndConsultarTotales" 
    android:text="@string/button_consultarTotales" />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:onClick="sndSubirFotos" 
    android:text="@string/subir_fotos" />

<Button
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:onClick="sndCerrar" 
    android:text="@string/button_cerrar" />

</LinearLayout>
