<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.sounds.customssn.CapturarActivity" >
	<TextView
	    android:id="@+id/textView1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_factura" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/edit_factura" >

	        <requestFocus android:layout_width="wrap_content" />

	    </EditText>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarFactura" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>

	<TextView
	    android:id="@+id/textView2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_marca" />
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/editText2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/edit_marca" >
	    </EditText>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarMarca" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>

	<TextView
	    android:id="@+id/textView3"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_modelo" />
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/editText3"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/edit_modelo" >
	    </EditText>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarModelo" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>

	<TextView
	    android:id="@+id/textView4"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_color" />
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/editText4"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/edit_color" >
	    </EditText>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarColor" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>
			
	<TextView
	    android:id="@+id/textView5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_origen" />
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/editText5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/edit_origen" >
	    </EditText>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarOrigen" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>
	
	<TextView
	    android:id="@+id/textView6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_serie" />
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/editText6"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:inputType="textCapCharacters"
	        android:hint="@string/edit_serie" >
	    </EditText>
	    <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarSerie" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>

	<TextView
	    android:id="@+id/textView7"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/text_foto" />
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <EditText
	        android:id="@+id/editText7"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:clickable="false" 
        	android:cursorVisible="false" 
        	android:focusable="false" 
        	android:focusableInTouchMode="false"
	        android:hint="@string/edit_foto" >
	    </EditText>
	    <Button
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
			android:onClick="sndFoto"          
	        android:text="@string/button_foto" />	    
	    <Button
	        android:layout_width="90dp"
	        android:layout_height="wrap_content"
	        android:onClick="sndLimpiarFoto" 
	        android:text="@string/button_limpiar" />
	
	</LinearLayout>
		
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:gravity="center"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >

	    <Button
	        android:layout_width="140dp"
	        android:layout_height="wrap_content"
			android:onClick="sndGrabar"        
	        android:text="@string/button_grabar" />

	    <CheckBox
	        android:id="@+id/checkBox1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/CheckBox_foto" />
	    
	</LinearLayout>

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="right"
	    android:orientation="horizontal"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin" >
		
		<Button
		    android:layout_width="140dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:onClick="sndBorrar"
		    android:text="@string/button_borrar" />
		
		<Button
		    android:layout_width="140dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="bottom"
		    android:onClick="sndCerrar"
		    android:text="@string/button_cerrar" />

	</LinearLayout>
						
</LinearLayout>
</ScrollView>
